# SpaceShaman.github.io

./: README.md  mkdocs.yml  pyproject.toml
blog/: .authors.yml  index.md
blog/posts/: django-private-docs.md  ner-training.md  use-gpt-to-produce-fake-data.md
docs/: 404.html  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
docs/2023/12/15/django-private-docs/: index.html
docs/archive/2023/: index.html
docs/category/django/: index.html
docs/category/python/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
overrides/partials/: comments.html
